--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,14 @@
         android:theme="@style/Theme.TFood"
         tools:targetApi="31">
         <activity
+            android:name=".project531.Activity.SetNewPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".project531.Activity.VerifyOTPActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".project531.Activity.SendOTPActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".project531.Activity.SearchActivity"
             android:exported="false" />
